Git_to_Salesforce/ Q-assign/objects/Unreviewed_Custom_Object__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_From_Group__c</fullName>
        <label>Assigned From Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_From_Queue__c</fullName>
        <label>Assigned From Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSubtype__c</fullName>
        <label>EventSubtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_assign_Last_Assigned_Date__c</fullName>
        <label>Q_assign_Last_Assigned_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShowAs__c</fullName>
        <label>ShowAs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ownerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ownerName</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unreviewed_Custom_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QA Unreviewed_Custom_Object</label>
    <nameField>
        <label>Unreviewed_Custom_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Unreviewed Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>